--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
       }
     }
   ],
+  "env": {
+    "NEXT_PUBLIC_GOOGLE_MAPS_API_KEY": "AIzaSyC-5o9YY4NS8y8F2ZTg8-zibHYRP_1dOEc",
+    "VERCEL_DEPLOYMENT": "true"
+  },
   "headers": [
     {
       "source": "/(.*)",
@@ -30,10 +34,23 @@
           "value": "no-cache, no-store, must-revalidate"
         },
         {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        },
+        {
           "key": "Viewport",
           "value": "width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "app/**/*.js": {
+      "maxDuration": 30
+    }
+  }
 } 
