--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,21 @@
 {
   "version": 2,
-  "buildCommand": "next build",
-  "outputDirectory": ".next",
+  "buildCommand": "npm run vercel-build",
   "cleanUrls": true,
-  "public": true,
+  "framework": "nextjs",
   "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "@next_public_firebase_api_key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@next_public_firebase_auth_domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@next_public_firebase_project_id",
-    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@next_public_firebase_storage_bucket",
-    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@next_public_firebase_messaging_sender_id",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "@next_public_firebase_app_id",
-    "STRIPE_SECRET_KEY": "@stripe_secret_key",
-    "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "@next_public_stripe_publishable_key",
-    "EMAIL_SERVICE": "@email_service",
-    "EMAIL_USER": "@email_user",
-    "EMAIL_PASSWORD": "@email_password",
-    "NEXT_PUBLIC_GOOGLE_MAPS_API_KEY": "@next_public_google_maps_api_key"
-  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "build": {
     "env": {
-      "NEXT_TELEMETRY_DISABLED": "1"
+      "NEXT_PUBLIC_VERCEL_ENV": "production"
     }
+  },
+  "env": {
+    "NEXT_PUBLIC_VERCEL_URL": "https://$VERCEL_URL"
   }
 } 
