--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "node ensure-components.js && node clear-cache.js && next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint",
     "clean": "node clear-cache.js",
@@ -39,7 +39,7 @@
     "lucide-react": "^0.503.0",
     "micro": "^9.4.1",
     "moment": "^2.30.1",
-    "next": "15.2.4",
+    "next": "^14.1.0",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.16.0",
     "react": "^18.2.0",
@@ -65,7 +65,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "14.1.0",
     "node-fetch": "^2.7.0",
     "puppeteer": "^24.10.0",
     "tailwindcss": "^4"
