--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,14 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "next build",
   "cleanUrls": true,
+  "public": false,
   "framework": "nextjs",
   "regions": ["iad1"],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
+  "functions": {
+    "app/api/**/*": {
+      "memory": 1024,
+      "maxDuration": 10
     }
-  ],
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_VERCEL_ENV": "production"
-    }
-  },
-  "env": {
-    "NEXT_PUBLIC_VERCEL_URL": "https://$VERCEL_URL"
   }
 } 
