--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^19.1.1",
     "@types/react-big-calendar": "^1.16.1",
     "axios": "^1.9.0",
+    "critters": "^0.0.23",
     "dotenv": "^16.5.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
